--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="modaloverlay"></div>
+    <div id="backdrop"></div>
+    <div id="modal"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
